--- a/src/assets/styles/layout/_appbar.scss
+++ b/src/assets/styles/layout/_appbar.scss
@@ -3,11 +3,8 @@
     height: 5rem;
     z-index: 997;
     top: 0;
-    width: 100%;
-    padding: 0 2rem;
-    // background-color: var(--surface-card);
-    // transition: left $transitionDuration;
-    display: flex;
-    align-items: center;
-    box-shadow: 0px 3px 5px rgba(0,0,0,.02), 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08); 
+    // width: 100%;
+    // // background-color: var(--surface-card);
+    // // transition: left $transitionDuration;
+    // box-shadow: 0px 3px 5px rgba(0,0,0,.02), 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08); 
 }
