minor fixes in DA Dashboard and setting up Livestock Management in farmer Port Make Admin Sidebar responsive by adding auto-hide and overlay sidebar Remove User Additional Info Form and Move Image Upload at User Account Info Form in Admin User Registration Minor Fixes in Dropdowns in User Personal Info Form
Minor Fixes in Farmer Layout, which includes Topbar, and Dock Nav
Setup Farmer Livestock Management
Create New Livestock Form
Create Livestock Data View for reading Farmers' Livestock
Initial Setup for Livestock Vaccination, Breeding, and Mortality Management

--- a/src/assets/styles/layout/_sidebar.scss
+++ b/src/assets/styles/layout/_sidebar.scss
@@ -1,6 +1,5 @@
 .layout-sidebar{
-    position: fixed;
-    z-index: 997;
-    top: 0;
-    left: 0;
+    @media screen and (max-width:1048px){
+        display: none;
+    }
 }
