--- a/src/assets/styles/layout/_content.scss
+++ b/src/assets/styles/layout/_content.scss
@@ -1,3 +1,15 @@
 .content-container{
     min-height: 650px;
 }
+
+.farmer-content-layout{
+    height: 536px;
+}
+
+.farmer-dock-nav{
+    position: fixed;
+    z-index: 997;
+    left: 0;
+    width: 100vw;
+    bottom: 0;
+}
