--- a/src/assets/styles/layout/_content.scss
+++ b/src/assets/styles/layout/_content.scss
@@ -13,3 +13,10 @@
     width: 100vw;
     bottom: 0;
 }
+
+.login-page{
+    background-image: url('/images/background/BG-SOLID-CENTER.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
