Fix Admin Layout

--- a/src/assets/styles/layout/_content.scss
+++ b/src/assets/styles/layout/_content.scss
@@ -1,6 +1,6 @@
-.content-container{
-    min-height: 650px;
-}
+// .content-container{
+//     min-height: 650px;
+// }
 
 .farmer-content-layout{
     height: 536px;
