--- a/src/assets/styles/layout/_appbar.scss
+++ b/src/assets/styles/layout/_appbar.scss
@@ -22,3 +22,15 @@
     // // transition: left $transitionDuration;
     // box-shadow: 0px 3px 5px rgba(0,0,0,.02), 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08); 
 }
+
+.page-container{
+    position:relative;
+}
+
+.admin-appbar{
+    position: fixed;    
+    height: 5rem;
+    z-index: 997;
+    top: 0;
+    padding: .5rem;
+}
